Remove unused attributes from app header module.

--- a/src/app-default.html
+++ b/src/app-default.html
@@ -74,7 +74,7 @@
 
 
 				<!-- Header -->
-				<app-header effects="waterfall" condensed-title="Discover the world." condenses fixed>
+				<app-header effects="waterfall" fixed>
 					<app-toolbar>
 						<paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
 						<div title>Github <span fw-100>viewer</span></div>
