Improv state of project at left navigation.

--- a/src/app-default.html
+++ b/src/app-default.html
@@ -60,7 +60,7 @@
 								<strong>
 									<iron-icon h-initial icon="icons:star"></iron-icon> [[item.stargazers_count]]
 								</strong>
-								: [[item.name]]
+								[[item.name]]
 							</paper-item>
 						</a>
 					</template>
