--- a/src/css-general.html
+++ b/src/css-general.html
@@ -14,6 +14,14 @@
 
 
 
+			/* scrollbar
+			---------------------------------------------------------------------------------------*/
+			::-webkit-scrollbar 		{ width:10px; }
+			::-webkit-scrollbar-thumb 	{ width:8px; background:rgba(0,0,0,0.4); border-radius:20px; }
+			::-webkit-scrollbar-track 	{ background:transparent; border-radius:20px; }
+
+
+
 			/* loading
 			---------------------------------------------------------------------------------------*/
 			.loading 					{ display:flex; position:fixed; z-index:2; top:0; right:0; bottom:0; left:0; background:rgba(255,255,255,0.95); align-items:center; }
