Increase width for overview icons at project page.

--- a/src/css-general.html
+++ b/src/css-general.html
@@ -89,7 +89,7 @@
 			/* cverview
 			---------------------------------------------------------------------------------------*/
 			#overview 										{ background:transparent; box-shadow:none; }
-			.item 											{ margin:auto; max-width:150px; }
+			#overview .item 								{ margin:auto; max-width:200px; }
 
 
 
